@@ -1259,7 +1259,6 @@ GAME_COMMAND_POINTER* new_game_command_table[GAME_COMMAND_COUNT] = {
 	game_command_set_sign_style,
 	game_command_set_player_group,
 	game_command_modify_groups,
-	game_command_kick_player,
 	game_command_cheat,
 	game_command_pickup_guest,
 	game_command_pickup_staff,
