@@ -88,7 +88,6 @@ enum GAME_COMMAND {
 	GAME_COMMAND_SET_SIGN_STYLE,
 	GAME_COMMAND_SET_PLAYER_GROUP,
 	GAME_COMMAND_MODIFY_GROUPS,
-	GAME_COMMAND_KICK_PLAYER,
 	GAME_COMMAND_CHEAT,
 	GAME_COMMAND_PICKUP_GUEST,
 	GAME_COMMAND_PICKUP_STAFF,
