@@ -3665,6 +3665,20 @@ enum {
 	STR_UNIT1DP_SUFFIX_FEET = 6011,
 	STR_UNIT1DP_NO_SUFFIX = 6012,
 
+	STR_KICK_REASON_NO_REASON = 6013,
+	STR_KICK_REASON_VANDALISM = 6014,
+	STR_KICK_REASON_SPAM = 6015,
+	STR_KICK_REASON_HARASSMENT = 6016,
+	STR_KICK_REASON_INAPPROPRIATE_CONTENT = 6017,
+	STR_KICK_REASON_BREAKING_SERVER_RULES = 6018,
+	STR_KICK_REASON_OTHER_REASON = 6019,
+	STR_ENTER_KICK_REASON_DESCRIPTION = 6020,
+	STR_CANT_KICK_YOURSELF = 6021,
+	STR_KICK_REASON_FORMAT_STRINGID = 6022,
+	STR_KICK_REASON_FORMAT_STRING = 6023,
+	STR_BLACK_STRING_RAW = 6024,
+	STR_PLAYER_NOT_FOUND = 6025,
+
 	// Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
 	STR_COUNT = 32768
 };
