@@ -26,8 +26,6 @@ extern "C"
     #include "../localisation/localisation.h"
 }
 
-constexpr size_t NETWORK_DISCONNECT_REASON_BUFFER_SIZE = 256;
-
 NetworkConnection::NetworkConnection()
 {
     ResetLastPacketTime();
