@@ -57,6 +57,7 @@ enum NETWORK_COMMAND
     NETWORK_COMMAND_EVENT,
     NETWORK_COMMAND_TOKEN,
     NETWORK_COMMAND_OBJECTS,
+    NETWORK_COMMAND_KICK,
     NETWORK_COMMAND_MAX,
     NETWORK_COMMAND_INVALID = -1
 };
