@@ -21,7 +21,10 @@
 #include "../util/util.h"
 #include "../network/network.h"
 
+#define STATUS_MAX_BUFFER 1024
 static char _password[33];
+static char window_network_status_text[STATUS_MAX_BUFFER];
+static close_callback _onClose = NULL;
 
 enum WINDOW_NETWORK_STATUS_WIDGET_IDX {
 	WIDX_BACKGROUND,
@@ -36,8 +39,6 @@ static rct_widget window_network_status_widgets[] = {
     { WWT_CLOSEBOX,			0,	427,	437,	2,		13,		STR_CLOSE_X,				STR_CLOSE_WINDOW_TIP },						// close x button
 	{ WIDGETS_END },
 };
-
-static char window_network_status_text[1024];
 
 static void window_network_status_onclose(rct_window *w);
 static void window_network_status_mouseup(rct_window *w, sint32 widgetIndex);
@@ -77,33 +78,37 @@ static rct_window_event_list window_network_status_events = {
 	NULL
 };
 
-static close_callback _onClose = NULL;
-
 void window_network_status_open(const char* text, close_callback onClose)
 {
 	_onClose = onClose;
-	safe_strcpy(window_network_status_text, text, sizeof(window_network_status_text));
 
-	// Check if window is already open
-	rct_window *window = window_bring_to_front_by_class(WC_NETWORK_STATUS);
-	if (window != NULL)
-		return;
+	//Store text into memory before determining line count.
+	safe_strcpy(window_network_status_text, text, STATUS_MAX_BUFFER);
+	
+	//determine line count to help in sizing window
+	int no_lines = 0, font_height = 0;
+	char buffer[STATUS_MAX_BUFFER];
+	safe_strcpy(buffer, text, STATUS_MAX_BUFFER);
+	gCurrentFontSpriteBase = FONT_SPRITE_BASE_MEDIUM;
+	gfx_wrap_string(buffer, 420 - (24 + 13), &no_lines, &font_height);
 
-	window = window_create_centred(420, 90, &window_network_status_events, WC_NETWORK_STATUS, WF_10 | WF_TRANSPARENT);
+	int height = max(90, 75 + (no_lines * 11));
+	int width = 420;
 
-	window->widgets = window_network_status_widgets;
-	window->enabled_widgets = 1 << WIDX_CLOSE;
-	window_init_scroll_widgets(window);
-	window->no_list_items = 0;
-	window->selected_list_item = -1;
-	window->frame_no = 0;
-	window->min_width = 320;
-	window->min_height = 90;
-	window->max_width = window->min_width;
-	window->max_height = window->min_height;
-
-	window->page = 0;
-	window->list_information_type = 0;
+	// Check if window is already open. if it is, see if height needs resized based on line count
+	rct_window *w = window_bring_to_front_by_class(WC_NETWORK_STATUS);
+	if (w == NULL) {
+		w = window_create_centred(width, height, &window_network_status_events, WC_NETWORK_STATUS, WF_10 | WF_TRANSPARENT);
+		w->widgets = window_network_status_widgets;
+		w->enabled_widgets = 1 << WIDX_CLOSE;
+		window_init_scroll_widgets(w);
+		w->no_list_items = 0;
+		w->selected_list_item = -1;
+	}
+	else {
+		width = w->width;
+		window_set_resize(w, width, height, width, height);
+	}
 }
 
 void window_network_status_close()
@@ -173,6 +178,8 @@ static void window_network_status_invalidate(rct_window *w)
 static void window_network_status_paint(rct_window *w, rct_drawpixelinfo *dpi)
 {
 	window_draw_widgets(w, dpi);
+	//From rebase
+	/*
 	gCurrentFontSpriteBase = FONT_SPRITE_BASE_MEDIUM;
 	char buffer[sizeof(window_network_status_text) + 10];
 	char* lineCh = buffer;
@@ -183,4 +190,10 @@ static void window_network_status_paint(rct_window *w, rct_drawpixelinfo *dpi)
 	sint32 y = w->y + (w->height / 2);
 	x -= gfx_get_string_width(buffer) / 2;
 	gfx_draw_string(dpi, buffer, COLOUR_BLACK, x, y);
+	*/
+	int x = w->x + (w->width / 2);
+	int y = w->y + (w->height / 2);
+	int width = w->width - (24 + 13);
+	char* lineCh = window_network_status_text;
+	gfx_draw_string_centred_wrapped(dpi, (void*)&lineCh, x, y, width, STR_BLACK_STRING_RAW, COLOUR_BLACK);
 }
