@@ -86,7 +86,6 @@ rct_widget *window_player_page_widgets[] = {
 	window_player_overview_widgets,
 	window_player_statistics_widgets
 };
-
 #pragma endregion
 
 #pragma region Events
@@ -97,6 +96,7 @@ void window_player_overview_resize(rct_window *w);
 void window_player_overview_mouse_down(sint32 widgetIndex, rct_window *w, rct_widget *widget);
 void window_player_overview_dropdown(rct_window *w, sint32 widgetIndex, sint32 dropdownIndex);
 void window_player_overview_update(rct_window* w);
+void window_player_overview_textinput(rct_window* w, int widgetIndex, char* text);
 void window_player_overview_invalidate(rct_window *w);
 void window_player_overview_paint(rct_window *w, rct_drawpixelinfo *dpi);
 
@@ -120,7 +120,7 @@ static rct_window_event_list window_player_overview_events = {
 	NULL,
 	NULL,
 	NULL,
-	NULL,
+	window_player_overview_textinput,
 	NULL,
 	NULL,
 	NULL,
@@ -263,6 +263,46 @@ static void window_player_overview_show_group_dropdown(rct_window *w, rct_widget
 	dropdown_set_checked(network_get_group_index(network_get_player_group(player)), true);
 }
 
+static void window_player_overview_show_kick_dropdown(rct_window *w, rct_widget *widget)
+{
+	rct_widget *dropdownWidget;
+	int numItems, i;
+	int player = network_get_player_index((uint8)w->number);
+	if (player == -1) {
+		return;
+	}
+
+	dropdownWidget = widget;
+
+	numItems = KICK_REASON_IDS_COUNT;
+	for (i = 0; i < numItems; i++) {
+		gDropdownItemsFormat[i] = KICK_REASON_STRING_IDS[i];
+		gDropdownItemsArgs[i] = 0;
+	}
+	window_dropdown_show_text(
+		w->x + dropdownWidget->left,
+		w->y + dropdownWidget->top,
+		dropdownWidget->bottom - dropdownWidget->top + 1,
+		w->colours[1],
+		0,
+		numItems
+	);
+	gDropdownDefaultIndex = 0;
+	gDropdownHighlightedIndex = 0;
+}
+
+static void window_player_overview_kick_player(rct_window* w, int kickReasonID, const char* reason)
+{
+	uint8 playerid = (uint8)w->number;
+	int player = network_get_player_index(playerid);
+	if (player == -1) return;
+
+	if (kickReasonID == KICK_REASON_CUSTOM && (!reason || strcmp(reason, "") == 0)) {
+		kickReasonID = KICK_REASON_DEFAULT;
+	}
+	network_kick_player(playerid, kickReasonID, reason);
+}
+
 void window_player_overview_close(rct_window *w)
 {
 
@@ -292,7 +332,7 @@ void window_player_overview_mouse_up(rct_window *w, sint32 widgetIndex)
 		}
 	}break;
 	case WIDX_KICK:
-		game_do_command(w->number, GAME_COMMAND_FLAG_APPLY, 0, 0, GAME_COMMAND_KICK_PLAYER, 0, 0);
+		window_player_overview_kick_player(w, STR_KICK_REASON_NO_REASON, "");
 		break;
 	}
 }
@@ -303,21 +343,40 @@ void window_player_overview_mouse_down(sint32 widgetIndex, rct_window *w, rct_wi
 	case WIDX_GROUP_DROPDOWN:
 		window_player_overview_show_group_dropdown(w, widget);
 		break;
+	case WIDX_KICK:
+		window_player_overview_show_kick_dropdown(w, widget);
+		break;
+	}
+}
+
+void window_player_overview_textinput(rct_window *w, sint32 widgetIndex, char* text)
+{
+	if (!text) {
+		return;
+	}
+	if (widgetIndex == WIDX_KICK) {
+		window_player_overview_kick_player(w, KICK_REASON_CUSTOM, text);
 	}
 }
 
 void window_player_overview_dropdown(rct_window *w, sint32 widgetIndex, sint32 dropdownIndex)
 {
 	sint32 player = network_get_player_index((uint8)w->number);
-	if (player == -1) {
-		return;
+	if (player == -1 || dropdownIndex == -1) return;
+
+	if (widgetIndex == WIDX_GROUP || widgetIndex == WIDX_GROUP_DROPDOWN) {
+		int group = network_get_group_id(dropdownIndex);
+		game_do_command(0, GAME_COMMAND_FLAG_APPLY, w->number, group, GAME_COMMAND_SET_PLAYER_GROUP, 0, 0);
+		window_invalidate(w);
 	}
-	if (dropdownIndex == -1) {
-		return;
+	else if (widgetIndex == WIDX_KICK) {
+		if (dropdownIndex == KICK_REASON_CUSTOM) {
+			window_text_input_open(w, widgetIndex, STR_ACTION_KICK_PLAYER, STR_ENTER_KICK_REASON_DESCRIPTION, STR_NONE, 0, NETWORK_DISCONNECT_KICK_REASON_MAX_SIZE);
+		}
+		else {
+			window_player_overview_kick_player(w, dropdownIndex, "");
+		}
 	}
-	sint32 group = network_get_group_id(dropdownIndex);
-	game_do_command(0, GAME_COMMAND_FLAG_APPLY, w->number, group, GAME_COMMAND_SET_PLAYER_GROUP, 0, 0);
-	window_invalidate(w);
 }
 
 void window_player_overview_resize(rct_window *w)
